--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,11 +1,11 @@
 repos:
 -   repo: https://github.com/ambv/black
-    rev: stable
+    rev: 21.4b2
     hooks:
     - id: black
-      language_version: python3.7
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v1.2.3
+      language_version: python3.8
+-   repo: https://gitlab.com/pycqa/flake8/
+    rev: 3.8.4
     hooks:
     - id: flake8
 
