--- a/Dockerfile_dev
+++ b/Dockerfile_dev
@@ -7,6 +7,6 @@ RUN conda config --set ssl_verify no; conda install -y -c bioconda -c conda-forg
             minimap2 bwa  pysam biopython \
             samtools=1.12; conda clean --all ; \
             pip install jsonpickle numpy ete3;
-RUN pip install git+https://github.com/Finn-Lab/EukCC/tree/dev
+RUN pip install https://github.com/Finn-Lab/EukCC/archive/refs/heads/dev.zip
 
 ENTRYPOINT ["eukcc"]
