make sure docker rebuilds EukCC on change

--- a/Dockerfile_dev
+++ b/Dockerfile_dev
@@ -7,6 +7,7 @@ RUN conda config --set ssl_verify no; conda install -y -c bioconda -c conda-forg
             minimap2 bwa  pysam biopython \
             samtools=1.12; conda clean --all ; \
             pip install jsonpickle numpy ete3;
+ADD https://api.github.com/repos/Finn-Lab/EukCC/git/refs/heads/dev version.json
 RUN pip install https://github.com/Finn-Lab/EukCC/archive/refs/heads/dev.zip
 
 ENTRYPOINT ["eukcc"]
